tests/basic/bad/test20.pepa
% File: tests/bad/test20.pepa
% Ill-formed numberic constant used for rate
P = (a, 1.5E).P;
(P <> P)
